main page template done

--- a/SASS/_variables.sass
+++ b/SASS/_variables.sass
@@ -1,8 +1,9 @@
 //COLORS
-$primary: #81a0de
-$secondary: #b38300
-$accent: #82775a
+$primary: #8db5a3
+$dark-primary: #324e41
+$accent: #b48f30da
 $dgrey: #4a4a48
+$lgrey: #e8e8e8
 
 //FONTS
 $default-font: Verdana, Geneva, sans-serif
