--- a/SASS/base/_base.sass
+++ b/SASS/base/_base.sass
@@ -1,6 +1,5 @@
 #content
     display: grid
-    gap: 5px
     grid-template-columns: 1fr
     margin: 0 auto
     padding: 0
@@ -10,5 +9,5 @@
     color: black
 
     h1, h2, h3
-        color: $secondary
+        color: $accent
         font-weight: bold
