--- a/SASS/layouts/_sections.sass
+++ b/SASS/layouts/_sections.sass
@@ -1,3 +1,4 @@
+
 #intro
     grid-area: intro
     display: grid
@@ -6,6 +7,7 @@
     background-color: $primary
     margin-top: 3rem
     color: white
+    
     +breakpoint-mobile()
         grid-template-columns: 1fr
 
@@ -17,7 +19,7 @@
         margin: 0 auto
         h1
             font-size: 3.2rem
-              
+            //-webkit-text-stroke: 1px white
         
     .right
         padding: 50px 10% 80px 10%
