--- a/SASS/layouts/_sections.sass
+++ b/SASS/layouts/_sections.sass
@@ -91,3 +91,19 @@
             margin-bottom: 5rem
             +breakpoint-tablet()
                 margin-bottom: 0
+
+
+#services-container
+    grid-area: "services"
+    background-color: $primary
+    min-height: 900px
+
+#about-info
+    grid-area: "info"
+    background-color: $primary
+    min-height: 900px
+
+#contact-info
+    grid-area: "contact-info"
+    background-color: $primary
+    min-height: 900px
