--- a/SASS/_variables.sass
+++ b/SASS/_variables.sass
@@ -1,9 +1,9 @@
-//COLORS
+//COLORSs
 $primary: #8db5a3
 $dark-primary: #324e41
 $accent: #b48f30da
 $dgrey: #4a4a48
-$lgrey: #e8e8e8
+$lgrey: #e8e8e8fb
 
 //FONTS
 $default-font: Verdana, Geneva, sans-serif
