--- a/SASS/modules/_navbar.sass
+++ b/SASS/modules/_navbar.sass
@@ -1,3 +1,7 @@
 .navbar
     .nav-item
         margin: 0 6px 0
+    .navbar-toggler
+        border: none
+        &:focus
+            outline: none
