--- a/SASS/_variables.sass
+++ b/SASS/_variables.sass
@@ -3,7 +3,7 @@ $primary: #8db5a3
 $dark-primary: #324e41
 $accent: #b48f30da
 $dgrey: #4a4a48
-$lgrey: #e8e8e8fb
+$lgrey: #f3f7fc
 
 //FONTS
 $default-font: Verdana, Geneva, sans-serif
