--- a/SASS/base/_base.sass
+++ b/SASS/base/_base.sass
@@ -5,7 +5,11 @@ h1
 h2, h3, h4
     color: $accent
     font-weight: bold
-
+a
+    &:hover
+        text-decoration: none
+        
+        
 #home-container
     display: grid
     padding: 0
