--- a/SASS/modules/_boxes.sass
+++ b/SASS/modules/_boxes.sass
@@ -1,7 +1,7 @@
 .media-box
     background-color: inherit
     color: inherit
-    width: 75%
+    width: 85%
     display: block
     text-align: center
     margin: 0 auto
@@ -17,5 +17,23 @@
         width: 90%
         display: block
         margin: 30px auto
+
+.contact-card
+    @extend .media-box
+    margin-top: -50px
+    padding: 20px
+    z-index: 1
+    background-color: white
+    width: 40%
+    i, h5 + p, p + h3, p + button
+        margin-top: 30px
+    i
+        color: $primary
+    h5
+        font-weight: bold
+    +breakpoint-mobile()
+        width: 94%
+        margin-top: 45px
+
 
         
